# segmentation_challenge

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/app/: main.py
src/app/api/: routes_segmentation.py
src/app/core/: config.py
src/app/pipelines/: _init_.py  segmentation.py
src/tests/: segmentation.py
