[project]
name = "lumina-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "uvicorn>=0.34.2",
]
